# sdrag_chainlit

./: .chainlit  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  RECOMENDACIONES_ANTES_INICIO_FASE_3.md  ROADMAP.md  app.py  chainlit.md  chainlit_es-ES.md  main.py  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: es-ES.json
.claude/skills/weather-data/scripts/: fetch_weather.py
documentos_de_referencia_tesis/: Protocolo_MCD_2025_Hector_Sanchez_v7_Weaviate.md  Protocolo_MCD_2025_Hector_Sanchez_v8_PageIndex.md  tailscale-computers-info.md
public/: theme.json
roadmap/: README.md  comercializacion.md  fase-0-infraestructura.md  fase-1-infraestructura-base.md  fase-2-trazabilidad.md  fase-3-rag-documental.md  fase-3.5-dify.md  fase-4-n8n-router.md  fase-5-cube-core.md  fase-6-visualizacion.md  fase-7-audit-trail.md  fase-8-benchmarks.md
scripts/: cleanup_project.sh  verify_infrastructure.sh
tests/: conftest.py  test_classification.py  test_dify_client.py  test_embeddings.py  test_integration.py
