[project]
name = "sdrag-chainlit"
version = "0.1.0"
description = "SDRAG Chainlit Frontend - Arquitectura RAG Híbrida con Capa Semántica Determinista"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Héctor Gabriel Sánchez Pérez", email = "hector@sanchezmx.com"}
]
dependencies = [
    "chainlit>=1.3.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
